se modifican los cors